# scoreboard-server

./: .editorconfig  .gitignore  Cargo.toml  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 20250505223839_database_init.sql  20250506173525_add_default_constraints.sql  20250506174615_alter_users_table.sql  20250506180218_alter_session_tokens_table.sql  20250507032216_create_users.sql  20250507035225_create_leaderboard.sql
src/: api.rs  auth.rs  board.rs  db.rs  error.rs  lib.rs  ws.rs
tests/: messages.rs  routes.rs  web_sockets.rs
