[package]
name = "scoreboard"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0"
thiserror = "2.0"
redis-macros = "0.5.2"
redis = { version = "0.30", features = ["tokio-comp"]}
uuid = { version = "1.16", features = ["v4", "v7","serde"]}

[[bin]]
name = "app"
path = "bin/app.rs"