[package]
name = "scoreboard"
version = "0.1.0-alpha"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0"
thiserror = "2.0"
redis-macros = "0.5.2"
redis = { version = "0.30", features = ["tokio-comp"]}
uuid = { version = "1.16", features = ["v4", "v7","serde"]}
futures-util = "0.3.31"
chrono = {version = "0.4.41",features = ["serde"]}
base64 = "0.22.1"
rand = "0.9.1"
dotenv = "0.15.0"
tower = "0.5.2"
hyper = "1.6.0"
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.sqlx]
version = "0.8.5"
features = [
    "tls-rustls",
    "runtime-tokio",
    "postgres",
    "chrono",
    "macros",
    "derive",
    "uuid",
]

[[bin]]
name = "app"
path = "bin/app.rs"
